cluster/addons/sonar/sonarqube-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sonarqube
  namespace: sonarqube
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths: 
      - path: /sonar/(.*) 
        backend:
          serviceName: sonarqube
          servicePort: 9000
